Final final version.

--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -3,7 +3,7 @@
 In diesem Kapitel treten wir einen Schritt zurück und betrachten die zu
 gestaltende Seite als Ganzes. Anders ausgedrückt: Nach der
 Mikrotypographie wenden wir uns nun der \emph{Makrotypographie} zu. Hier geht es also um
-die Frage wo auf einer Seite Textelemente platziert werden können – stets mit
+die Frage, wo auf einer Seite Textelemente platziert werden können – stets mit
 dem Ziel, einerseits ein harmonisches und »ruhiges« Gesamtbild zu erzeugen und
 andererseits die Lesbarkeit an sich zu optimieren.
 
@@ -152,11 +152,11 @@ wird. Wieso nicht einfach 100\,\% (bzw. ein möglichst großer Rasterfaktor)? Di
 entscheidende Einschränkung ist die \emph{Zeilenlänge}, die dadurch
 quantifiziert wird, wie viele Zeichen des regulär formatierten Textes
 durchschnittlich in eine Zeile passen. Konservative Typograph:innen empfehlen,
-dass dieser Wert zwischen 60 und 80 Zeichen pro Zeile liegt, da ansonsten die
+dass dieser Wert zwischen 60 und 80 Zeichen pro Zeile beträgt, da ansonsten die
 Lesbarkeit beeinträchtigt ist. Dieses Skript hat etwa 65 Zeichen pro Zeile. Je
 nach Textgattung (etwa bei signifikantem Formelanteil) ist aber auch ein
 größerer Wert geeignet. Wir weisen darauf hin, dass die Zeilenlänge von der
-Laufweite der Schriftart abhängt.
+Laufweite der Schriftart abhängt.\looseness-1
 
 Andererseits sollte natürlich auch noch ein relevanter Teil der Seite
 beschreibbar sein. So sorgt ein Rasterfaktor von 7 zwar für kurze Zeilen,
@@ -260,7 +260,7 @@ aus und bildet Euch ein Urteil.
 
 Da es wie gesagt im Einzelfall günstiger sein kann, ein paar wenige Zeichen in
 eine eigentlich schon volle Zeile zu »quetschen«, stellen Zeilenumbrüche ein
-nicht-triviales Optimierungsproblem da. Für dieses nutzt man in \LaTeX\ am
+nicht-triviales Optimierungsproblem dar. Für dieses nutzt man in \LaTeX\ am
 besten das \verb!microtype!-Paket. Um Silben erfolgreich zu trennen, ist es
 wichtig, dass über das \verb!babel!-Paket die richtige Sprache eingestellt ist.
 Mit dieser Konfiguration wird das Ergebnis solide aussehen; trotzdem kann es
@@ -374,9 +374,9 @@ eingehen.
 Hier hat man natürlich größeren gestalterischen Spielraum, weil weniger Text am
 Stück gesetzt werden muss. Dennoch ist es sinnvoll, nicht komplett zu
 eskalieren: Gerade wenn viele Informationen unterschiedlicher Art untergebracht
-werden sollen, liegt die Versuchung nahe, jede mit einer eigenen
-Hervorhebungsart und Schriftgrade zu setzen. Es ist jedoch oft angenehmer, wenn
-mehrere Elemente auf die gleiche Weise gesetzt werden.
+werden sollen, liegt die Versuchung nahe, für jede eine individuelle
+Hervorhebungsart und einen eigenen Schriftgrad zu verwenden. Es ist jedoch oft
+ansprechender, wenn mehrere Elemente auf die gleiche Weise gesetzt werden.
 
 Es ist möglich und durchaus üblich, bei Plakaten eine Hintergrundfarbe oder ein
 Hintergrundbild zu verwenden. Dabei ist es aber wichtig, dass sich der zu
