--- a/1-Zeichensetzung.tex
+++ b/1-Zeichensetzung.tex
@@ -38,7 +38,7 @@ Anführungszeichen, also »66–99«, benutzt:
 
 Alternativ können im Deutschen auch die sogenannten \emph{Guillemets}
 \Char{»}\,\Char{«} verwendet werden, so wie in diesem Skript.  Innen werden dann
-die einfachen Guillements \Char{›}\,\Char{‹} verwendet. Allerdings sollte man
+die einfachen Guillemets \Char{›}\,\Char{‹} verwendet. Allerdings sollte man
 sich für eine Variante entscheiden und diese konsequent benutzen.
 
 Wir weisen darauf hin, dass die auf einer Tastatur leichter zu erreichenden
