--- a/4-Seitenlayout.tex
+++ b/4-Seitenlayout.tex
@@ -353,7 +353,7 @@ sich Schriftgrade für
 \item (Unter-)Überschriften und
 \item Kapitelüberschriften
 \end{enumerate}
-auszusuchen, zu testen, ob sie gut zusammenpassen, und dann ausschließich diese
+auszusuchen, zu testen, ob sie gut zusammenpassen, und dann ausschließlich diese
 zu verwenden. In diesem Skript werden Überschriften für Abschnitte und
 Unterabschnitte und sogar die Kapitelüberschriften übrigens nicht durch eine
 größere Schrift, sondern nur durch die Verwendung anderer Schriftschnitte
